css/style.css
* {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    -ms-box-sizing: border-box;
    box-sizing: border-box;
	font-family: Open Sans;
	text-align: center;
	vertical-align: middle;
    list-style-type: none;
}

a {
	color: white;
	visited: #ccc;
}

.shade {
	background-color: rgba(0,0,0,0.6);
	height: 80vh;
	width: 100vw;
}

.splash {
	background: url(..//img/bar.jpg) no-repeat fixed;
	background-size: cover;
	height: 100vh;
	width: 100vw;
}

.logo {
	height: 250px;
	width: 250px;
	margin-top: 15vh;
	left: 40vw;
	border-radius: 100%;
	border: 4px solid white;
	position: fixed;
	z-index: 5;
}

.nav-div {
	margin-top: 65vh;
	background-color: rgba(0,0,0,0.7);
	border: 1px solid tan;
	position: fixed;
	width: 100vw;
}

.hamburger {
	height: 25px;
	width: 25px;
	position: absolute;
	left: 10px;
	top: 10px;
	cursor: pointer;
}

.ham-div {
	display: none;
	width: 100vw;
	height: 30px;
	background-color: rgba(255,255,255,0.7);
}

.nav-li {
	display: inline-block;
	cursor: pointer;
	font-size: 27px;
	padding: 2%;
	color: white;
}

.test {
	height: 100vh;
	width: 100vw;
	background-color: #ccc;
}

.square-info {
	background-color: rgba(0,0,0,0.8);
	position: absolute;
	z-index: 5;
	top: 10vh;
	left: 80vw;
	width: 15vw;
	color: white;
	font-weight: lighter;
	cursor: pointer;
}

.square-harrigans {
	display: none;
}

.address {
	background-color: rgba(0,0,0,0.8);
	color: white;
	width: 30vw;
	margin: auto auto 40vw auto;
	position: fixed;
}

.address-ul {
	padding-left: 0;
	border: 1px solid tan;
}

.info {
	color: white;
	height: 100vh;
	width: 100vw;
	padding: 15vh;
	display: none;
	position: absolute;
}

.more-info {
	display: none;
}

.info-par {
	padding-left: 7.5vw;
	padding-right: 7.5vw;
}

